Fix layout issues and sort btns

--- a/src/components/HeadBar/Header.scss
+++ b/src/components/HeadBar/Header.scss
@@ -2,8 +2,7 @@
   border-bottom: 0.25em solid #F2C8A4;
   //padding-left: 1em;
   margin-bottom: 1em;
-  margin-top: 1em;
-  padding-bottom: 0.5em;
+  padding: 1em 0 0.5em 0.5em;
   width: 100%;
 
   .headTitle{
