--- a/src/components/Layout/GroupLeft.scss
+++ b/src/components/Layout/GroupLeft.scss
@@ -1,8 +1,5 @@
 .leftPanel{
   top:0;
-  width: 22em;
-  height: 100%;
-  display: block;
-  position: fixed;
+  height: 100%;  
   background: url('http://upload.jianshu.io/daily_images/images/JF4BVe82TTNqzRvsZeuF.jpg') no-repeat;
 }
