--- a/src/components/Post/post.scss
+++ b/src/components/Post/post.scss
@@ -32,6 +32,10 @@ font-weight: normal;
   text-decoration: none;
   color: #999999;
 }
+.post-sort-selected{
+  color: #000;
+  font-weight: bold;
+}
 .post-list-container
 {
   float: left;
