--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -10,27 +10,16 @@ $navitemHoverBgColor:#ff8a21;
 .main{
   background-color: $mainBgColor;
   padding: 0;
-  margin: 2px auto auto 1px;
-}
-.main .left{
- width: 50px;
- background-color:$leftBgColor;
- float: left;
- position: fixed;
- z-index: 9999;
-}
-.main .middle{
- width: 300px;
- background-color: $middleBgColor;
- margin: 10px 5px;
- position: fixed;
- z-index: 10000;
-}
-.main .right{
- background-color: $middleBgColor;
- position: relative;
- left: 310px;
- overflow: hidden;
- z-index: 1;
- max-width: 990px;
+
+  .middle{
+     width: 20%;
+     background-color: $middleBgColor;
+     position: fixed;
+     height: 100%;
+  }
+
+  .right{
+     width: 75%;
+     margin-left: 20%;
+  }
 }
